--- a/Dockerfile_pipeline
+++ b/Dockerfile_pipeline
@@ -2,8 +2,9 @@ FROM kestr3l/stable-diffusion-webui:1.2.2 as build
 
 WORKDIR /home/user/
 RUN mkdir kohya_ss
-COPY ./ ./kohta_ss
-
 WORKDIR /home/user/kohya_ss
+COPY . .
 RUN ls -la
-RUN bash ./setup.sh
+RUN chmod +x /home/user/kohya_ss/setup.sh
+RUN make
+#ENTRYPOINT ["/home/user/kohya_ss/setup.sh"]
